<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zach.lab7.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_edit"
        android:ems="10"
        android:id="@+id/nameEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingTextView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="62dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Switch
        android:text="@string/meditate_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ex_switch"
        app:layout_constraintRight_toRightOf="@+id/ratingBar"
        app:layout_constraintBaseline_toBaselineOf="@+id/spouseToggleButton" />

    <Button
        android:text="@string/mood_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="lorelaiGilmore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="384dp"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/coffee_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="@string/coffee_question"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spouseToggleButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:id="@+id/spouseToggleButton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/spinner"
        android:entries="@array/breakfast_foods"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spouseToggleButton"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.18" />

    <TextView
        android:text="@string/ratingsBarQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="@string/ratingsBarQuestion"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nameEditText"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/breakfastQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:text="@string/breakfastQuestion"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ratingBar"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coffeeRadioGroup"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@+id/button"
        android:layout_marginBottom="8dp"
        android:checkedButton="@+id/radioButton2"
        android:baselineAligned="false">

        <RadioButton
            android:text="@string/coffeeNo"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            tools:text="@string/coffeeNo"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.45" />

        <RadioButton
            android:text="@string/coffeeYes"
            android:layout_width="253dp"
            android:layout_height="0dp"
            android:id="@+id/radioButton2"
            tools:text="@string/coffeeYes"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_weight="1" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
